# iree

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  README.md  SUBMODULE_VERSIONS  WORKSPACE  index.html  pip-release-links.html
.github/: labeler.yml
.github/workflows/: kokoro_labeler.yml  presubmit.yml  schedule_candidate_release.yml  synchronize_submodules.yml  test.yml  update_llvm_dependent_submodules.yml  update_submodules.yml
bindings/c-api/: index.html
bindings/python/: index.html
bindings/python/pyiree/compiler/: BUILD
bindings/tensorflow-lite/: index.html
build_tools/bazel/: tblgen.bzl
build_tools/bazel/third_party_import/llvm-project/: configure.bzl
build_tools/bazel/third_party_import/llvm-project/overlay/llvm/: BUILD.bazel
build_tools/bazel/third_party_import/llvm-project/overlay/mlir/: BUILD.bazel
build_tools/bazel/third_party_import/llvm-project/overlay/mlir/test/: BUILD.bazel
build_tools/bazel_to_cmake/: bazel_to_cmake_targets.py
build_tools/buildkite/pipelines/: presubmit.yml
build_tools/buildkite/scripts/: update_pipeline_configurations.py
build_tools/buildkite/scripts/common/: buildkite_pipeline_manager.py  buildkite_utils.py
build_tools/cmake/: iree_copts.cmake  iree_setup_toolchain.cmake
build_tools/docker/bazel/: Dockerfile
build_tools/docker/cmake-python-vulkan/: Dockerfile
build_tools/docker/cmake_nvidia/: Dockerfile
build_tools/docker/vulkan/: Dockerfile
build_tools/github_actions/runner/: README.md  fetch_and_setup.sh
build_tools/github_actions/runner/gcp/: create_templates.sh
build_tools/kokoro/gcp_ubuntu/cmake/linux/x86-swiftshader/: build_kokoro.sh
build_tools/kokoro/gcp_ubuntu/cmake/linux/x86-turing/: build_kokoro.sh
building-from-source/: index.html
building-from-source/android/: index.html
building-from-source/getting-started/: index.html
building-from-source/optional-features/: index.html
community/projects/: index.html
deployment-configurations/cpu-dylib/: index.html
deployment-configurations/gpu-vulkan/: index.html
docs/: developer_overview.md  repository_management.md
experimental/ModelBuilder/: BUILD
experimental/ModelBuilder/test/: BUILD  TestMatMulVulkan.cpp  TestSimpleJITVulkan.cpp
experimental/merge_testing/: conflict.md  only_google.md  only_master.md  test.md  test2.md
git_scripts/: submodule_versions.py
integrations/tensorflow/compiler/: BUILD
integrations/tensorflow/compiler/dialect/tf_strings/conversion/: BUILD
integrations/tensorflow/compiler/dialect/tf_strings/ir/: BUILD
integrations/tensorflow/compiler/dialect/tf_tensorlist/conversion/: BUILD
integrations/tensorflow/compiler/dialect/tf_tensorlist/ir/: BUILD
integrations/tensorflow/e2e/: BUILD  CMakeLists.txt
integrations/tensorflow/e2e/keras/: BUILD
integrations/tensorflow/e2e/keras/applications/: BUILD
integrations/tensorflow/e2e/keras/layers/: BUILD
integrations/tensorflow/e2e/keras/train/: BUILD
integrations/tensorflow/e2e/math/: BUILD
integrations/tensorflow/e2e/slim_vision_models/: BUILD
integrations/tensorflow/iree_tf_compiler/: BUILD
integrations/tensorflow/iree_tf_compiler/TF/: BUILD
integrations/tensorflow/iree_tf_compiler/TFL/: BUILD
integrations/tensorflow/iree_tf_compiler/dialect/tf_strings/: BUILD
integrations/tensorflow/iree_tf_compiler/dialect/tf_strings/conversion/: BUILD
integrations/tensorflow/iree_tf_compiler/dialect/tf_strings/ir/: BUILD
integrations/tensorflow/iree_tf_compiler/dialect/utils/: BUILD
iree/: BUILD.bazel  build_defs.oss.bzl
iree/base/: CMakeLists.txt
iree/compiler/Conversion/CodegenUtils/: BUILD
iree/compiler/Conversion/HLOToLinalg/: BUILD
iree/compiler/Conversion/HLOToLinalg/test/: BUILD
iree/compiler/Conversion/LinalgToLLVM/: BUILD
iree/compiler/Conversion/LinalgToSPIRV/: BUILD  LinalgTileAndFusePass.cpp
iree/compiler/Dialect/Flow/Analysis/: BUILD
iree/compiler/Dialect/Flow/Conversion/: BUILD
iree/compiler/Dialect/Flow/Conversion/HLOToFlow/: BUILD
iree/compiler/Dialect/Flow/IR/: BUILD
iree/compiler/Dialect/Flow/Transforms/: BUILD
iree/compiler/Dialect/Flow/Utils/: BUILD
iree/compiler/Dialect/HAL/Conversion/: BUILD
iree/compiler/Dialect/HAL/IR/: BUILD
iree/compiler/Dialect/HAL/Transforms/: BUILD
iree/compiler/Dialect/HAL/Utils/: BUILD
iree/compiler/Dialect/IREE/Conversion/: BUILD
iree/compiler/Dialect/IREE/IR/: BUILD
iree/compiler/Dialect/IREE/Tools/: BUILD
iree/compiler/Dialect/IREE/Transforms/: BUILD
iree/compiler/Dialect/Shape/Conversion/: BUILD
iree/compiler/Dialect/Shape/IR/: BUILD
iree/compiler/Dialect/Shape/Transforms/: BUILD
iree/compiler/Dialect/Shape/Utils/: BUILD
iree/compiler/Dialect/VM/Analysis/: BUILD
iree/compiler/Dialect/VM/Conversion/: BUILD
iree/compiler/Dialect/VM/IR/: BUILD
iree/compiler/Dialect/VM/Tools/: BUILD
iree/compiler/Dialect/VM/Transforms/: BUILD
iree/compiler/Dialect/VMLA/Conversion/: BUILD
iree/compiler/Dialect/VMLA/IR/: BUILD  VMLATypes.cpp
iree/compiler/Dialect/VMLA/Transforms/: BUILD
iree/compiler/Dialect/Vulkan/IR/: BUILD
iree/compiler/Dialect/Vulkan/Utils/: BUILD
iree/compiler/Translation/: BUILD
iree/compiler/Utils/: BUILD
iree/hal/llvmjit/: BUILD
iree/samples/custom_modules/dialect/: BUILD
iree/test/e2e/xla_ops/: dynamic-update-slice.mlir
iree/tools/: BUILD  CMakeLists.txt
iree/vm/: BUILD
kokoro/gcp_ubuntu/bazel/bindings/: build_kokoro.sh
kokoro/gcp_ubuntu/bazel/core/: build_kokoro.sh
kokoro/gcp_ubuntu/bazel/integrations/: build_kokoro.sh
kokoro/gcp_ubuntu/cmake/: build_kokoro.sh
kokoro/gcp_ubuntu/cmake/android/arm64-v8a/: build_kokoro.sh
kokoro/gcp_ubuntu/cmake/linux/x86-turing/: build.sh  build_kokoro.sh
ml-frameworks/jax/: index.html
ml-frameworks/tensorflow/: index.html
ml-frameworks/tensorflow-lite/: index.html
runtime/src/iree/vm/: value.h
scripts/git/: populate_reference_repo.sh  update_llvm_dependent_submodules.sh  update_tf_llvm_submodules.py
(+21 files in other folders)
