load("@org_tensorflow//third_party/mlir:tblgen.bzl", "gentbl")

licenses(["notice"])

package(default_visibility = [":test_friends"])

# Please only depend on this from MLIR tests.
package_group(
    name = "test_friends",
    packages = ["//..."],
)

cc_library(
    name = "IRProducingAPITest",
    hdrs = ["APITest.h"],
    includes = ["."],
)

gentbl(
    name = "TestVectorTransformPatternsIncGen",
    tbl_outs = [
        (
            "-gen-rewriters",
            "lib/DeclarativeTransforms/TestVectorTransformPatterns.h.inc",
        ),
    ],
    tblgen = "@llvm_project//mlir:mlir-tblgen",
    td_file = "lib/DeclarativeTransforms/TestVectorTransformPatterns.td",
    td_srcs = [
        "@llvm_project//mlir:VectorTransformPatternsTdFiles",
    ],
)

gentbl(
    name = "TestOpsIncGen",
    strip_include_prefix = "lib/Dialect/Test",
    tbl_outs = [
        (
            "-gen-op-decls",
            "lib/Dialect/Test/TestOps.h.inc",
        ),
        (
            "-gen-op-defs",
            "lib/Dialect/Test/TestOps.cpp.inc",
        ),
        (
            "-gen-dialect-decls",
            "lib/Dialect/Test/TestOpsDialect.h.inc",
        ),
        (
            "-gen-enum-decls",
            "lib/Dialect/Test/TestOpEnums.h.inc",
        ),
        (
            "-gen-enum-defs",
            "lib/Dialect/Test/TestOpEnums.cpp.inc",
        ),
        (
            "-gen-struct-attr-decls",
            "lib/Dialect/Test/TestOpStructs.h.inc",
        ),
        (
            "-gen-struct-attr-defs",
            "lib/Dialect/Test/TestOpStructs.cpp.inc",
        ),
        (
            "-gen-rewriters",
            "lib/Dialect/Test/TestPatterns.inc",
        ),
    ],
    tblgen = "@llvm_project//mlir:mlir-tblgen",
    td_file = "lib/Dialect/Test/TestOps.td",
    td_srcs = [
        "@llvm_project//mlir:OpBaseTdFiles",
        "@llvm_project//mlir:include/mlir/IR/OpAsmInterface.td",
        "@llvm_project//mlir:include/mlir/IR/SymbolInterfaces.td",
        "@llvm_project//mlir:include/mlir/Interfaces/CallInterfaces.td",
        "@llvm_project//mlir:include/mlir/Interfaces/ControlFlowInterfaces.td",
        "@llvm_project//mlir:include/mlir/Interfaces/InferTypeOpInterface.td",
        "@llvm_project//mlir:include/mlir/Interfaces/SideEffectInterfaces.td",
    ],
    test = True,
)

cc_library(
    name = "TestDialect",
    srcs = [
        "lib/Dialect/Test/TestDialect.cpp",
        "lib/Dialect/Test/TestPatterns.cpp",
    ],
    hdrs = [
        "lib/Dialect/Test/TestDialect.h",
    ],
    includes = [
        "lib/DeclarativeTransforms",
        "lib/Dialect/Test",
    ],
    deps = [
        ":TestOpsIncGen",
        "@llvm_project//llvm:support",
        "@llvm_project//mlir:ControlFlowInterfaces",
        "@llvm_project//mlir:DerivedAttributeOpInterface",
        "@llvm_project//mlir:Dialect",
        "@llvm_project//mlir:IR",
        "@llvm_project//mlir:InferTypeOpInterface",
        "@llvm_project//mlir:Pass",
        "@llvm_project//mlir:SideEffects",
        "@llvm_project//mlir:StandardOps",
        "@llvm_project//mlir:StandardOpsTransforms",
        "@llvm_project//mlir:TransformUtils",
        "@llvm_project//mlir:Transforms",
    ],
)

cc_library(
    name = "TestIR",
    srcs = [
        "lib/IR/TestFunc.cpp",
        "lib/IR/TestMatchers.cpp",
        "lib/IR/TestSideEffects.cpp",
        "lib/IR/TestSymbolUses.cpp",
    ],
    deps = [
        ":TestDialect",
        "@llvm_project//llvm:support",
        "@llvm_project//mlir:IR",
        "@llvm_project//mlir:Pass",
        "@llvm_project//mlir:StandardOps",
        "@llvm_project//mlir:Support",
    ],
)

cc_library(
    name = "TestPass",
    srcs = [
        "lib/Pass/TestPassManager.cpp",
    ],
    deps = [
        "@llvm_project//llvm:support",
        "@llvm_project//mlir:IR",
        "@llvm_project//mlir:Pass",
        "@llvm_project//mlir:Support",
    ],
)

cc_library(
    name = "TestTransforms",
    srcs = glob([
        "lib/Transforms/*.cpp",
    ]),
    defines = ["MLIR_CUDA_CONVERSIONS_ENABLED"],
    includes = ["lib/Dialect/Test"],
    deps = [
        ":TestDialect",
        ":TestVectorTransformPatternsIncGen",
        "@llvm_project//llvm:support",
        "@llvm_project//mlir:Affine",
        "@llvm_project//mlir:Analysis",
        "@llvm_project//mlir:EDSC",
        "@llvm_project//mlir:GPUDialect",
        "@llvm_project//mlir:GPUToCUDATransforms",
        "@llvm_project//mlir:GPUTransforms",
        "@llvm_project//mlir:IR",
        "@llvm_project//mlir:LinalgOps",
        "@llvm_project//mlir:LinalgTransforms",
        "@llvm_project//mlir:Pass",
        "@llvm_project//mlir:SCFDialect",
        "@llvm_project//mlir:StandardOps",
        "@llvm_project//mlir:Support",
        "@llvm_project//mlir:TransformUtils",
        "@llvm_project//mlir:Transforms",
        "@llvm_project//mlir:VectorOps",
        "@llvm_project//mlir:VectorToLLVM",
        "@llvm_project//mlir:VectorToSCF",
    ],
)

cc_library(
    name = "TestAffine",
    srcs = glob([
        "lib/Dialect/Affine/*.cpp",
    ]),
    deps = [
        "@llvm_project//llvm:support",
        "@llvm_project//mlir:Affine",
        "@llvm_project//mlir:AffineTransforms",
        "@llvm_project//mlir:AffineUtils",
        "@llvm_project//mlir:Analysis",
        "@llvm_project//mlir:IR",
        "@llvm_project//mlir:Pass",
        "@llvm_project//mlir:Support",
        "@llvm_project//mlir:Transforms",
        "@llvm_project//mlir:VectorOps",
    ],
)

cc_library(
    name = "TestSPIRV",
    srcs = glob([
        "lib/Dialect/SPIRV/*.cpp",
    ]),
    deps = [
        "@llvm_project//mlir:IR",
        "@llvm_project//mlir:Pass",
        "@llvm_project//mlir:SPIRVDialect",
        "@llvm_project//mlir:SPIRVLowering",
    ],
)
